labs/lab3/ConstrainTemplateImages.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequiredimages
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredImages
        listLind: K8sRequiredImagesList
        plural: k8srequiredimages
        singular: k8srequiredimages
      validation:
        openAPIV3Schema:
          properties:
            images:
              type: array
              items: string
   targets:
     - target: admission.k8s.gatekeeper.sh
       rego: |
          package k8srequiredimages

          deny[{"msg": msg, "details": {"not supported": not_supported }}]{
            provided := {labels}

          }
