labs/lab3/ConstrainTemplateImagesLatest.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequiredimagestags
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredImagesTags
      validation:
        openAPIV3Schema:
          properties:
            images:
              type: array
              items: string
   targets:
     - target: admission.k8s.gatekeeper.sh
       rego: |
          package k8srequiredimagestags
