labs/lab3/denynameconstrains.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyName
name: no-policy-validation
spec:
  parameters:
    invalidName: "policy-Validation"
---
apiVersion: v1
kind: Pod
metadata:
  name: "policy-Validation"
spec:
  containers:
  - image: nginx
    name: nginx
