labs/lab3/k8sAlwaysdeny.yaml
apiversion: constraints.gatekeeper.sh/v1beta1
kind: K8sAlwaysDeny
metadata:
    name: pod-always-deny
spec:
    match:
        kinds:
            - apiGroups: [""]
              kings: ["Pod"]
    parameters:
        message: "Access DENIED"
